# MacadamiaSolver

./: .gitignore  .gitmodules  .ocamlformat  Chrobelias.opam  LICENSE  MacadamiaSolver.opam  README.md  dune-project  ff:w  shell.nix  t.smt2
.github/workflows/: build-linux.yml
examples/: bad-exp.smt2  basic-bitvector-bitwise.smt2  discrete_log_unsat.smt2  double_exp.smt2  exp_fcp_7_11_13.smt2  fcp-exp-7-11.smt2  fcp_2_4.smt2  frobenius.smt2  power_of_power.smt2
examples/LIA/: fcp_2_4.smt2  fcp_7_11.smt2  fcp_7_11_13.smt2  for-all-nats-exists-bigger.smt2
examples/QF_EIA/: basic-exp-sat.smt2  basic-exp-unsat.smt2
lib/: .nfa.ml.swp  DfaCollection.ml  DfaCollection.mli  HelloWorld.ml  HelloWorld.mli  NfaCollection.ml  NfaCollection.mli  ast.ml  ast.mli  bits.ml  bits.mli  debug.ml  debug.mli  dfa.ml  dfa.mli  dune  ir.ml  ir.mli  nfa.ml  nfa.mli  optimizer.ml  optimizer.mli  parser.ml  regex.ml  smtlib.ml  solver.ml  solver.mli  utils.ml  utils.mli
test/unit/: TestHelloWorld.ml  TestNfa.ml  TestNfaCollection.ml  TestParser.ml  Unit.ml  dune
tests/: dune  lia.smt2  lia.t  qf-eia.smt2  qf-eia.t  smtlib.t
